syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.csystem.app.service.grpc.greeting.proto";

service GreetingService {
  rpc helloEN(GreetingRequest) returns (GreetingResponse);
  rpc helloTR(GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
  string firstName = 1;
  string lastName = 2;
  bool married = 3;
}

message GreetingResponse {
  string greeting = 1;
  string maritalStatus = 2;
}




